# formula1-analytics

./: .env.example  .gitignore  README.md  docker-compose.yml  populate.py  pyproject.toml  requirements.txt
Data Layer/gold/models/: ddl_gold.sql  der_gold.md  mer_gold.md
Data Layer/raw/: Analise_PySpark2.ipynb  analise.ipynb  dicionario_bronze.md  i.ipynb
Data Layer/raw/.ipynb_checkpoints/: analise-checkpoint.ipynb
Data Layer/silver/: analise.ipynb  dicionario_silver.md
Data Layer/silver/.ipynb_checkpoints/: analise-checkpoint.ipynb
Data Layer/silver/dados_limpos/: drivers.csv  (+16 more)
Notebooks/: Analise_PySpark.ipynb  combined_overview.py
Transformer/ETL/: etl_raw_to_silver.py  etl_silver_to_gold.py  raw_to_silver.ipynb  raw_to_silver_job.ipynb
bronze/: dicionario_bronze.md
bronze/dados_originais/: amostra.csv
data/: postmaster.pid
data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/silver/: dicionario_silver.md
docker/: Dockerfile  docker-compose.yml  init.sql  populate.py
docker/initdb/: 00_create_schemas.sql
docs/bronze/: analytics_notebook_plan.md
docs/silver/: dicionario_silver.md
jupyter/PC1/: analise_completa_f1_pyspark.ipynb  analise_seasons_constructors_pyspark.ipynb  constructors.ipynb  seasons.ipynb  teste.ipynb
notebooks/.ipynb_checkpoints/: Analise_PySpark-checkpoint.ipynb
scripts/: wait_for_db.sh
silver/: config.yml
silver/models/: dld_silver.md
silver/seasons_silver.csv/: .part-00000-4659c0e0-9cd4-4e4d-b1ed-af7aa7181b01-c000.csv.crc
src/: spark_bootstrap.py
transformer/ETL/: etl_raw_to_silver.py
(+1721 files in other folders)
